[package]
name = "cfgcomment"
description = "Universal comment conditional compilation preprocessor"
authors = ["Yaroslav Bolyukin <iam@lach.pw>"]
license = "MIT"
version = "0.2.0"
edition = "2018"

[dependencies]
structopt = { version = "0.3.22", features = ["color", "suggestions", "wrap_help"] }
cfgcomment-core = { version = "0.2.0", path = "../../crates/core" }
git-filter-server = "0.1.0"
tracing-subscriber = { version = "0.2.19", features = ["tracing-log"] }
tracing = "0.1.26"
anyhow = "1.0.42"
